# vehicle-information-service

./: .gitlab-ci.yml  .travis.yml  README.md
.github/workflows/: rust.yml
vehicle-information-service/: Cargo.toml  README.md  rust-toolchain  rustfmt.toml
vehicle-information-service-client/: Cargo.toml  README.md
vehicle-information-service-client/examples/: get.rs
vehicle-information-service-client/src/: lib.rs
vehicle-information-service-client/tests/: gets.rs  subscriptions.rs
vehicle-information-service/examples/: server.rs
vehicle-information-service/src/: api_error.rs  api_type.rs  filter.rs  lib.rs  signal_server.rs  websocket_server.rs
vehicle-information-service/tsts/: gets.rs  subscriptions.rs
