[package]
authors = ["olu@daimler.com"]
description = "This is an implementiaton for the Vehicle Information Service standard"
documentation = "https://docs.rs/vehicle-information-service"
license = "MIT"
homepage = ""
repository = ""
edition = "2018"
keywords = ["automotive", "vis", "vehicle", "car"]
name = "vehicle-information-service"
readme = "README.md"
version = "1.1.2"

[dependencies]
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = ["compat"] }
http = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", default-features = false, features = ["io-util", "time"] }
tokio-tungstenite = "0.10"
tungstenite = "0.10"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.serde_json]
version = "1.0"
# u128 can currently not be deserialized using serde
# Waiting for fix to https://github.com/serde-rs/json/issues/505
# features = ["arbitrary_precision"]

[dev-dependencies]
env_logger = "0.7"
structopt = "0.3"
tokio-socketcan = "0.1"
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "rt-threaded"] }

[features]
integration_tests = []
